# ParticleMagneticField

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/magnetic_field/: CMakeLists.txt  MagneticField.cpp  MagneticField.h
src/paramspanel/: CMakeLists.txt  ParamsPanel.cpp  ParamsPanel.h
src/particle/: CMakeLists.txt  Particle.h
src/sceneview/: CMakeLists.txt  SceneView.cpp  SceneView.h
src/simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h
